# Generated by Django 4.2.14 on 2024-12-18 00:12

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Curso',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('curso_nome', models.CharField(max_length=100)),
                ('curso_area', models.CharField(blank=True, max_length=50)),
                ('curso_nivel', models.IntegerField(blank=True)),
            ],
        ),
        migrations.CreateModel(
            name='Certificado',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('certificado_nome', models.CharField(max_length=50)),
                ('certificado_status', models.IntegerField(choices=[(1, 'COMPLETADO'), (2, 'EM_ANDAMENTO'), (3, 'FALHOU')])),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
