# Generated by Django 4.2.14 on 2024-10-15 12:34

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Atividade',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('nome_atividade', models.CharField(max_length=50)),
                ('pontuacao', models.IntegerField()),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('updated_by', models.ForeignKey(on_delete=django.db.models.deletion.DO_NOTHING, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Nivel',
            fields=[
                ('id', models.IntegerField(primary_key=True, serialize=False)),
                ('nivel', models.CharField(max_length=20)),
                ('pontuacao_base', models.IntegerField()),
            ],
        ),
        migrations.CreateModel(
            name='Pendencia',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('pendencia', models.CharField(max_length=50)),
                ('nivel', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='rating.nivel')),
            ],
        ),
        migrations.CreateModel(
            name='LogRating',
            fields=[
                ('id', models.AutoField(primary_key=True, serialize=False)),
                ('pontuacao_ganha', models.IntegerField(default=0)),
                ('pontuacao', models.IntegerField(default=0)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('updated_by', models.IntegerField(default=0)),
                ('atividade', models.ForeignKey(null=True, on_delete=django.db.models.deletion.CASCADE, to='rating.atividade')),
                ('user_id', models.ForeignKey(on_delete=django.db.models.deletion.DO_NOTHING, to=settings.AUTH_USER_MODEL)),
            ],
        ),
    ]
